# MiniTen

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  backprop.c  backprop.pyx  pyproject.toml  requirements.txt  run.py  setup.py  test_backprop.py  test_vec_multi.py  test_vector_operations.py  vec_multi.c  vec_multi.pyx  vector_operations.c  vector_operations.py
.github/workflows/: ci.yml
UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
benchmarks/: README.md  benchmark_neural_network.py  benchmark_operations.py  benchmark_suite.py
benchmarks/results/: neural_network.md  vector_operations.md
docs/: ARCHITECTURE.md  INSTALLATION.md  PHASE_1_2_SUMMARY.md  README.md  edge_features.md
examples/: README.md  basic_network.py  demo_features.py  neural_network_training.py  vector_operations.py
examples/image_recognition/: README.md  compare_performance.py  comparison_report.md  comparison_results.json  onnx_mobilenet.py  train_miniten.py  train_pytorch.py  train_tensorflow.py
miniten/: __init__.py
miniten/core/: __init__.py  autograd.py  backprop.pyx  operations.pyx  tensor.py
miniten/edge/: __init__.py  benchmark.py  compression.py  export.py  pruning.py  quantization.py  utils.py
miniten/gpu/: __init__.py
miniten/monitor/: __init__.py  callbacks.py  dashboard.py  logger.py  profiler.py
miniten/nn/: __init__.py  activations.py  advanced_impl.pyx  cnn.py  cnn_impl.pyx  gnn.py  layers.py  layers_impl.pyx  module.py  rnn.py  rnn_impl.pyx
miniten/optim/: __init__.py  lr_scheduler.py  optim_impl.pyx
miniten/rl/: __init__.py
miniten/utils/: __init__.py  audio.py  data.py  deployment.pyx  signal.py  text.py  video.py  vision.py
miniten/viz/: __init__.py  axes.py  colors.py  export.py  figure.py  plotting.py  render_impl.pyx
tests/: README.md  test_backprop.py  test_phase2_3_4.py  test_vector_operations.py
