[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29", "numpy>=1.19"]
build-backend = "setuptools.build_meta"

[project]
name = "miniten"
version = "0.1.0"
description = "A lightweight deep learning framework optimized for edge platforms"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MiniTen Contributors"}
]
keywords = ["deep learning", "edge computing", "neural networks", "machine learning", "cython", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.19",
    "cython>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/sumeshthakr/MiniTen"
Documentation = "https://github.com/sumeshthakr/MiniTen/tree/main/docs"
Repository = "https://github.com/sumeshthakr/MiniTen"
Issues = "https://github.com/sumeshthakr/MiniTen/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=miniten --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
